[package]
name = "webchange-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web & async
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.6" }
# Config
ron = "0.7.0"
serde = { version = "1.0.130", features = ["serde_derive"] }
# Push notifications
pushover-rs = "0.2.6"
